kubernetes/raspberry/media/jellyfin/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
spec:
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  hostnames:
    - "jellyfin.${SECRET_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: derived-7heal3emqq
          port: 8096
