kubernetes/raspberry/media/jellyfin/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: external
  rules:
    - host: &host "jellyfin.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: derived-7heal3emqq
                port:
                  number: 8096
  tls:
    - hosts:
        - *host
